Use wave tool correct error bad contrast, add aria labels for blank columns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,13 +140,6 @@ tr {
   color: var(--captum-motuum);
 }
 
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link.active {
-  color: var(--dutch-white);
-  background-color: var(--captum-motuum);
-  border-color: var(--captum-motuum);
-}
-
 /* Form Styles */
 
 .form-check .form-check-input {
@@ -218,6 +211,21 @@ legend {
   background-color: var(--bistre);
   color: var(--dutch-white);
 }
+
+.navbar-nav .nav-link {
+  color: var(--dutch-white) !important;
+}
+
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link:focus {
+  color: var(--dutch-white);
+  opacity: 0.8;
+}
+
+.navbar-nav .nav-link.active {
+  color: var(--dutch-white) !important;
+}
+
 
 /* Footer Styles */
 
